<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="name_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_hint">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_address_hint">Email Address</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="bot_nav_title_trip">Trip</string>
    <string name="bot_nav_title_chats">Chats</string>
    <string name="bot_nav_title_profile">Profile</string>
    <string name="bot_nav">Bottom Navigation</string>
    <string name="sign_out">Sign Out</string>
    <string name="where_to">Where to?</string>
    <string name="user_location_access_denied">User Location Access Denied</string>

    <string-array name="stations_array">
        <item>Utown</item>
        <item>Faculty of Science</item>
    </string-array>

    <string name="next">Next</string>
    <string name="trip_request_main_title">Trip Request</string>
    <string name="trip_request_from">FROM</string>
    <string name="trip_request_to">TO</string>
    <string name="trip_request_hint_enter_location">Enter Location</string>
    <string name="trip_request_luggages">NUMBER OF LUGGAGE</string>
    <string name="trip_request_luggage_weight">TOTAL WEIGHT OF ALL LUGGAGE (KG)</string>

    <string name="trip_request_confirm">Confirm</string>
    <string name="trip_request_confirm_luggage_text">Luggages</string>
    <string name="trip_request_confirm_luggage_KG_text">KG Total</string>

    <string name="trip_request_bidding_main_title">Trip Request Bidding</string>
    <string name="trip_request_bidding_cancel">CANCEL REQUEST</string>
    <string name="bidding_ends_in">Bidding ends in</string>
    <string name="trip_bidding_cancel_msg">Are you sure you want to cancel?</string>
    <string name="trip_bidding_cancel_title">Cancel Trip Request</string>
    <string name="trip_bidding_confirm_title">Confirm Porter</string>
    <string name="trip_bidding_confirm_msg">Would you like to confirm your porter for</string>
    <string name="trip_bidding_accept_porter">Accept</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>

    <string name="trip_confirmed_main_title">Trip Confirmed</string>
    <string name="trip_confirmed_porter_otw_msg">Your porter is on the way.</string>
    <string name="trip_confirmed_porter_arrived_msg">Your porter has arrived.</string>
    <string name="trip_confirmed_button_start_trip">Start Trip</string>
    <string name="trip_confirmed_button_start_confirm_trip">Press again to confirm</string>
    <string name="trip_confirmed_button_cancel_trip">Cancel Trip</string>

    <string name="page_title_porter">Porter</string>
    <string name="profile_language">Language</string>
    <string name="profile_currency">Currency</string>
    <string name="profile_reminders">Reminders</string>
    <string name="profile_privacy_policy">Privacy Policy</string>
    <string name="profile_sign_out_msg">Are you sure you want to sign out?</string>







    <string name="app_name">viaPatron</string>
    <string name="dont_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="here">here!</string>
    <string name="back">Back</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_small_text">Sign Up</string>
    <string name="popular_destinations">Popular Destinations</string>
    <string name="history">History</string>
    <string name="see_all">See All</string>
    <string name="new_delhi">New Delhi</string>
    <string name="mumbai_central">Mumbai Central</string>
    <string name="chennai">Chennai</string>
    <string name="your_porter">"Your Porter: "</string>
    <string name="chandra">Chandra</string>
    <string name="eighteen">18</string>
    <string name="today">Today</string>
    <string name="Porters_Currently_Active">Porters Currently Active</string>
    <string name="eighty_seven">87</string>
    <string name="bookings">Bookings</string>
    <string name="comma">,</string>
    <string name="one_four_zero_zero">1400</string>
    <string name="my_profile">My Profile</string>
    <string name="usd">USD</string>
    <string name="right_arrow">-></string>
    <string name="units">Units</string>
    <string name="imperial">Imperial</string>
    <string name="max">Max</string>
    <string name="singapore">Singapore</string>
    <string name="thesgwayfareratgmail_com">thesgwayfarer@gmail.com</string>
    <string name="english">English</string>
    <string name="stations">Stations</string>
    <string name="mumbra">Mumbra</string>
    <string name="mum">Mum</string>
    <string name="enter" tools:keep="@string/enter">Enter</string>
    <string name="search">Search</string>
    <string name="exit_3">Exit 3</string>
    <string name="weight_of_1st_luggage_in_kg">WEIGHT OF 1ST LUGGAGE (IN KG)</string>
    <string name="luggages_small_text" tools:keep="@string/luggages_small_text">Luggages</string>
    <string name="sixteen_point_five">16.5</string>
    <string name="weight_of_2nd_luggage_in_kg">WEIGHT OF 2ND LUGGAGE (IN KG)</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="aug">Aug</string>
    <string name="two_luggages">2 Luggages</string>
    <string name="twenty_eight">28</string>
    <string name="kg">KG</string>
    <string name="dash">-</string>
    <string name="dollar_sign">$</string>
    <string name="ten">10</string>
    <string name="twenty">20</string>
    <string name="platform_b">Platform B</string>
    <string name="total">Total</string>
    <string name="zero_two">02</string>
    <string name="colon">:</string>
    <string name="fifty_nine">59</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="vishnu">Vishnu</string>
    <string name="nine_fifty">9.50</string>
    <string name="twelve_point_zero_zero">12.00</string>
    <string name="four_point_nine">4.9</string>
    <string name="four_point_seven">4.7</string>
    <string name="eleven">11</string>
    <string name="star">Star</string>
    <string name="space"> </string>
    <string name="zero_three">03</string>
    <string name="zero_one">01</string>
    <string name="question_mark">\?</string>
    <string name="number_of_luggages">Number of luggages</string>
    <string name="trip_has_already_started_are_you_sure_you_want">Trip has already started. Are you sure you want
    </string>
    <string name="to_cancel">to cancel?</string>
    <string name="note_cancelling_a_trip_after_it_has_been">Note: Cancelling a trip after it has been</string>
    <string name="confirmed_will_place_you_in_low_priority">confirmed will place you in low priority.</string>
    <string name="stop_trip">Stop Trip</string>
    <string name="end_trip">End Trip</string>
    <string name="are_you_sure_you_want_to_end_your_trip">Are you sure you want to end your trip?</string>
    <string name="your_last_trip">YOUR LAST TRIP</string>
    <string name="need_help">NEED HELP?</string>
    <string name="rate_your_ride">Rate Your Ride</string>
    <string name="photo">Photo</string>
    <string name="trip_in_progress">Trip In Progress</string>
    <string name="google_maps_image_1" tools:keep="@string/google_maps_image_1">Google Maps - Image 1</string>
    <string name="sunday">Sunday</string>
    <string name="fourteen">14</string>
    <string name="cover_textview" tools:keep="@string/cover_textview">cover Textview</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
