<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResetPassword" android:id="@+id/reset_password" android:minHeight="2048dp"
        android:maxHeight="2048dp" android:minWidth="1480dp" android:maxWidth="1480dp">

    <TextView
            android:text="@string/reset_password"
            android:layout_width="0dp"
            android:layout_height="32dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/resetPassword1"
            android:textAppearance="@android:style/TextAppearance" android:textSize="14sp"
            android:textColor="@android:color/black" android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:ems="10"
            android:id="@+id/email_address"
            android:hint="@string/email_address" android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="@+id/resetPassword1" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="@+id/resetPassword1"
            app:layout_constraintTop_toBottomOf="@+id/resetPassword1"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent" android:autofillHints="" tools:targetApi="o"
            android:inputType="textEmailAddress"/>
    <Button
            android:text="@string/reset_your_password"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="@+id/email_address"
            app:layout_constraintEnd_toEndOf="@+id/email_address"
            android:id="@+id/reset_your_password"
            style="@android:style/Widget.Button"
            android:backgroundTint="@android:color/black"
            android:textAppearance="@android:style/TextAppearance" android:textSize="14sp"
            android:textColor="@android:color/white"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_address" app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="32dp"
            android:onClick="goToMainActivityScreenFromResetPasswordScreenViaResetPasswordButton"
            tools:targetApi="lollipop"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="?android:attr/actionModeCloseDrawable"
            android:id="@+id/back_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:onClick="goToMainActivityScreenFromResetPasswordScreenViaBackButton" android:visibility="visible"
            android:background="@android:color/transparent" android:tint="@android:color/holo_blue_dark"
            android:contentDescription="@string/back" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toStartOf="@+id/resetPassword1"
            tools:targetApi="lollipop" android:backgroundTint="@android:color/transparent"/>
</android.support.constraint.ConstraintLayout>