<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_request_bidding_main_title"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"/>

    <FrameLayout
            android:layout_width="320dp"
            android:layout_height="140dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner_white_small">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_trip_bidding_station_left_side"
                    android:textSize="14sp"
                    android:textColor="@color/colorBlack"
                    android:text=""/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:id="@+id/tv_trip_bidding_from"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:text=""/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center|top"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_trending_flat_black_24dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:id="@+id/tv_trip_bidding_station_right_side"
                    android:textSize="14sp"
                    android:textColor="@color/colorBlack"
                    android:text=""/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="2dp"
                    android:id="@+id/tv_trip_bidding_to"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:text=""/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_trip_bidding_luggage"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_trip_bidding_luggage_weight"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryGreyDark"/>
        </LinearLayout>


        <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="10dp">

            <Button
                    android:layout_width="80dp"
                    android:layout_height="46dp"
                    android:id="@+id/trip_bidding_price"
                    android:background="@drawable/rounded_corner_accent"
                    android:text="$3 - $4"
                    android:textColor="@color/colorPrimary"/>
        </FrameLayout>
    </FrameLayout>

    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:id="@+id/trip_request_bidding_table"
            android:layout_weight="1">
    </android.support.v7.widget.RecyclerView>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/bidding_ends_in"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="16sp" />

    <TextView
            android:id="@+id/trip_request_bidding_time_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryGreyDark" />

    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="80dp">

        <Button
                android:layout_width="200dp"
                android:layout_height="46dp"
                android:id="@+id/trip_request_bidding_cancel_button"
                android:background="@drawable/rounded_corner_warning"
                android:text="@string/trip_request_bidding_cancel"
                android:textColor="@color/colorPrimary"/>
    </FrameLayout>

</LinearLayout>
